--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "webpack": "^4.20.2",
     "webpack-cli": "^3.1.2"
   },
+  "stack": "heroku-16",
   "description": "This README would normally document whatever steps are necessary to get the application up and running.",
   "version": "1.0.0",
   "main": "index.js",
