--- a/test/fixtures/listings.yml
+++ b/test/fixtures/listings.yml
@@ -10,6 +10,8 @@
 #  modified_by_userid :integer
 #  created_at         :datetime         not null
 #  updated_at         :datetime         not null
+#  price              :float
+#  overview           :text
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
