--- a/test/fixtures/listings.yml
+++ b/test/fixtures/listings.yml
@@ -12,6 +12,7 @@
 #  updated_at         :datetime         not null
 #  price              :float
 #  overview           :text
+#  merchant_name      :string
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
