--- a/package.json
+++ b/package.json
@@ -39,5 +39,8 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "webpack-notifier": "^1.8.0"
+  }
 }
