--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.4",
+    "compress.js": "^1.1.2",
     "lodash": "^4.17.11",
     "prettier": "^2.0.5",
     "react": "^16.13.1",
@@ -41,6 +42,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/plugin-transform-runtime": "^7.11.5",
     "webpack-notifier": "^1.8.0"
   }
 }
