--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "babel-loader": "^8.0.4",
     "compress.js": "^1.1.2",
     "lodash": "^4.17.11",
+    "mixpanel-browser": "^2.39.0",
     "prettier": "^2.0.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
