--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react-loading": "^2.0.3",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
+    "react-scroll": "^1.8.7",
+    "react-scroll-manager": "^1.0.3",
     "react-swipeable": "^6.0.1",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
