--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-loading": "^2.0.3",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
+    "react-router-hash-link": "^2.4.3",
     "react-scroll": "^1.8.7",
     "react-scroll-manager": "^1.0.3",
     "react-swipeable": "^6.0.1",
