--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.4",
     "compress.js": "^1.1.2",
+    "css-loader": "^5.2.7",
     "lodash": "^4.17.11",
     "mixpanel-browser": "^2.39.0",
+    "postcss-loader": "^6.2.1",
     "prettier": "^2.0.5",
     "react": "^16.13.1",
     "react-calendly": "^3.0.3",
     "react-dom": "^16.13.1",
+    "react-image-gallery": "^1.2.7",
     "react-intersection-observer": "^9.1.0",
     "react-loading": "^2.0.3",
     "react-redux": "^5.0.7",
@@ -24,7 +27,9 @@
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
+    "sass-loader": "^10.1.1",
     "semantic-ui-react": "^0.86.0",
+    "style-loader": "^2.0.0",
     "webpack": "^4.20.2",
     "webpack-cli": "^3.1.2"
   },
