--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "prettier": "^2.0.5",
     "react": "^16.13.1",
     "react-calendly": "^3.0.3",
+    "react-dnd": "^16.0.1",
+    "react-dnd-touch-backend": "^16.0.1",
     "react-dom": "^16.13.1",
     "react-image-gallery": "^1.2.7",
     "react-intersection-observer": "^9.1.0",
