--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^16.13.1",
     "react-calendly": "^3.0.3",
     "react-dom": "^16.13.1",
+    "react-helmet": "^6.1.0",
     "react-image-gallery": "^1.2.7",
     "react-intersection-observer": "^9.1.0",
     "react-loading": "^2.0.3",
