--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-router-hash-link": "^2.4.3",
+    "react-router-sitemap": "^1.2.0",
     "react-scroll": "^1.8.7",
     "react-scroll-manager": "^1.0.3",
     "react-swipeable": "^6.0.1",
@@ -50,13 +51,18 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack --mode=development --watch",
-    "postinstall": "webpack"
+    "postinstall": "webpack",
+    "sitemap": "babel-node utils/sitemap-generator.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@babel/plugin-transform-runtime": "^7.11.5",
+    "babel-cli": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-register": "^6.26.0",
     "webpack-notifier": "^1.8.0"
   }
 }
