--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-calendly": "^3.0.3",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
+    "react-helmet-async": "^1.3.0",
     "react-image-gallery": "^1.2.7",
     "react-intersection-observer": "^9.1.0",
     "react-loading": "^2.0.3",
