--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@babel/core": "^7.1.2",
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
+    "antd": "^5.10.1",
     "babel-loader": "^8.0.4",
     "compress.js": "^1.1.2",
     "css-loader": "^5.2.7",
